Mobile first design and responsive images

--- a/app/index.html
+++ b/app/index.html
@@ -2,21 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JD Ghuman | Automation & Front End Developer</title>
     <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,300italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
   </head>
   <body>
-    <div class="large-hero">
-      <img src="assets/images/ocean.jpg">
-      <div class="large-hero__text-content">
-        <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
-        <h2 class="large-hero__subtitle">Software Automation<span class="job-descrip"> | Front End Developer</span></h2>
-        <h2 class="large-hero--mobile">Front End Developer</h2>
-        <div class="center">
-          <a class="btn" href="#contact">Contact Me</a>
+    <header>
+      <div class="large-hero">
+        <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
+        <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
+        <div class="large-hero__text-content">
+          <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
+          <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
+          <h2 class="large-hero--mobile">Front End Developer</h2>
+          <p><a class="btn" href="#contact">Contact Me</a></p>
         </div>
       </div>
-    </div>
+    </header>
   </body>
 </html>
