Add nav and update header

--- a/app/index.html
+++ b/app/index.html
@@ -8,17 +8,30 @@
     <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
   </head>
   <body>
-    <header>
-      <div class="large-hero">
-        <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
-        <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
-        <div class="large-hero__text-content">
-          <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
-          <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
-          <h2 class="large-hero--mobile">Front End Developer</h2>
-          <p><a class="btn" href="#contact">Contact Me</a></p>
+    <header class="site-header">
+      <div class="wrapper">
+        <div class="site-header__menu-content">
+          <nav class="primary-nav primary-nav--position-right">
+            <ul>
+              <li><a href="#">Portfolio</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
+
     </header>
+    <div class="large-hero">
+      <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
+      <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
+      <div class="large-hero__text-content">
+        <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
+        <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
+        <h2 class="large-hero--mobile">Front End Developer</h2>
+        <p><a class="btn btn__full" href="#contact">Contact Me</a></p>
+      </div>
+    </div>
+
   </body>
 </html>
