--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,12 @@
   <body>
     <header class="site-header">
       <div class="wrapper">
+        <div class="site-header__pad">
+          <div class="site-header__logo">
+            <img class="site-header__logo-icon" src="assets/images/JD-Final_logo-black.png" alt="JDevelop LLC logo">
+          </div>
+        </div>
+
         <div class="site-header__menu-content">
           <nav class="primary-nav primary-nav--position-right">
             <ul>
@@ -26,10 +32,12 @@
       <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
       <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
       <div class="large-hero__text-content">
-        <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
-        <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
-        <h2 class="large-hero--mobile">Front End Developer</h2>
-        <p><a class="btn btn__full" href="#contact">Contact Me</a></p>
+        <div class="wrapper">
+          <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
+          <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
+          <h2 class="large-hero--mobile">Front End Developer</h2>
+          <p><a class="btn btn__full" href="#contact">Contact Me</a></p>
+        </div>
       </div>
     </div>
 
