--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JD Ghuman | Automation & Front End Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
+    <link rel="stylesheet" href="temp/styles/styles.css">
   </head>
   <body>
     <header class="site-header">
       <div class="wrapper">
         <div class="site-header__pad">
           <div class="site-header__logo">
-            <img class="site-header__logo-icon" src="assets/images/JD-Final_logo-black.png" alt="JDevelop LLC logo">
+            <img class="site-header__logo-icon" src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo">
           </div>
         </div>
 
