Add portfolio section

--- a/app/index.html
+++ b/app/index.html
@@ -41,5 +41,40 @@
       </div>
     </div>
 
+    <!-- PORTFOLIO -->
+    <section>
+      <div class="wrapper">
+        <h2 class="headline headline--centered headline--main-title headline--margin-small">Portfolio</h2>
+        <div class="row row--gutters row--equal-height-at-medium generic-content-container">
+          <div class="row__medium-6">
+            <div class="portfolio-item">
+              <div class="portfolio-item__image portfolio-item--b-margin">
+                <img srcset="assets/images/rn_small.jpg" alt="R&N Consulting">
+              </div>
+              <p class="headline--title headline--t-margin-small headline--b-margin-small">Responsive, Desktop, Mobile, Tablet</p>
+              <p class="headline--description headline--b-margin-small">R&N already had their own development team, however, due to their busy schedule and available resources, I was given the task to put together a new version of their official site.</p>
+            </div>
+          </div>
+          <div class="row__medium-6">
+            <div class="portfolio-item">
+              <div class="portfolio-item__image">
+                <img srcset="assets/images/alliance_small.jpg" alt="R&N Consulting">
+              </div>
+              <p class="headline--title headline--t-margin-small headline--b-margin-small">Mobile First Design</p>
+              <p class="headline--description generic-content-container--b-margin">Alliance moving requested a mobile first design with a strict 10 day project deadline, and the deadline was a high priority. Challenge accepted! With the analytics wired up, I consider this site a 'work in progress'. Adjustments are being made according to user feedback, site statistics, and AB testing. The priority here is to increase user conversions.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT -->
+    <section>
+      <div class="wrapper">
+        <h2 class="headline headline--centered headline--main-title headline--margin-small">About</h2>
+
+      </div>
+    </section>
+
   </body>
 </html>
