--- a/app/index.html
+++ b/app/index.html
@@ -10,18 +10,17 @@
   <body>
     <header class="site-header">
       <div class="wrapper">
-        <div class="site-header__pad">
+        <!-- <div class="site-header__pad">
           <div class="site-header__logo">
             <img class="site-header__logo-icon" src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo">
           </div>
-        </div>
+        </div> -->
 
         <div class="site-header__menu-content">
           <nav class="primary-nav primary-nav--position-right">
             <ul>
-              <li><a href="#">Portfolio</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#portfolio"><span>Portfolio</span></a></li>
+              <li><a href="#contact"><span>Contact</span></a></li>
             </ul>
           </nav>
         </div>
@@ -33,7 +32,10 @@
       <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
       <div class="large-hero__text-content">
         <div class="wrapper">
-          <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1>
+          <div class="site-header__logo-main">
+            <img src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo">
+          </div>
+          <!-- <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1> -->
           <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
           <h2 class="large-hero--mobile">Front End Developer</h2>
           <p><a class="btn btn__full" href="#contact">Contact Me</a></p>
@@ -42,7 +44,7 @@
     </div>
 
     <!-- PORTFOLIO -->
-    <section>
+    <section id="portfolio">
       <div class="wrapper">
         <h2 class="headline headline--centered headline--main-title headline--margin-small">Portfolio</h2>
         <div class="row row--gutters row--equal-height-at-medium generic-content-container">
@@ -52,7 +54,7 @@
                 <img srcset="assets/images/rn_small.jpg" alt="R&N Consulting">
               </div>
               <p class="headline--title headline--t-margin-small headline--b-margin-small">Responsive, Desktop, Mobile, Tablet</p>
-              <p class="headline--description headline--b-margin-small">R&N already had their own development team, however, due to their busy schedule and available resources, I was given the task to put together a new version of their official site.</p>
+              <!-- <p class="headline--description headline--b-margin-small">R&N already had their own development team, however, due to their busy schedule and available resources, I was given the task to put together a new version of their official site.</p> -->
             </div>
           </div>
           <div class="row__medium-6">
@@ -61,7 +63,7 @@
                 <img srcset="assets/images/alliance_small.jpg" alt="R&N Consulting">
               </div>
               <p class="headline--title headline--t-margin-small headline--b-margin-small">Mobile First Design</p>
-              <p class="headline--description generic-content-container--b-margin">Alliance moving requested a mobile first design with a strict 10 day project deadline, and the deadline was a high priority. Challenge accepted! With the analytics wired up, I consider this site a 'work in progress'. Adjustments are being made according to user feedback, site statistics, and AB testing. The priority here is to increase user conversions.</p>
+              <!-- <p class="headline--description generic-content-container--b-margin">Alliance moving requested a mobile first design with a strict 10 day project deadline, and the deadline was a high priority. Challenge accepted! With the analytics wired up, I consider this site a 'work in progress'. Adjustments are being made according to user feedback, site statistics, and AB testing. The priority here is to increase user conversions.</p> -->
             </div>
           </div>
         </div>
@@ -69,12 +71,41 @@
     </section>
 
     <!-- ABOUT -->
-    <section>
+    <section  id="contact" class="about">
       <div class="wrapper">
-        <h2 class="headline headline--centered headline--main-title headline--margin-small">About</h2>
-
+        <div class="about__title">
+          <h2 class="about__name">JD</h2>
+          <h2 class="about__name about__name-last">gHuman</h2>
+        </div>
+        <div class="row">
+          <div class="row__medium-6">
+            <p class="about__description">I am a Software Automation Engineer and Front End Developer in Orlando, Florida.  I enjoy turning concepts and ideas into beautiful, responsive, user intuitive designs. When I'm not building websites I can be found grilling corn at the beach, playing with my kids, walking my yappy dog, and drinking coffee...   I'm always drinking coffee!
+  						</p>
+          </div>
+          <div class="row__medium-6">
+            <div class="about__buttons">
+              <div>
+                <a class="btn btn__full btn__about emailme">Email Me</a>
+                <p class="about__emailcopy">jdsghuman@gmail.com</p>
+              </div>
+              <div>
+                <a class="btn btn__full btn__about" href="https://github.com/jdsghuman">GitHub</a>
+              </div>
+              <div>
+                <a class="btn btn__full btn__about" href="https://www.linkedin.com/in/jdghuman/">LinkedIn</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
-
+    <footer class="site-footer">
+      <div class="wrapper">
+        <p>Copyright &#x000A9;&nbsp; <span id="copyyear"></span> JDevelop LLC</p>
+        <p>JD Ghuman - Orlando, FL</p>
+        <p>jdsghuman@gmail.com</p>
+      </div>
+    </footer>
+    <script src="temp/scripts/App.js"></script>
   </body>
 </html>
