--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,9 @@
             <img class="site-header__logo-icon" src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo">
           </div>
         </div> -->
-
+        <div class="site-header__menu-icon">
+          <div class="site-header__menu-icon__middle"></div>
+        </div>
         <div class="site-header__menu-content">
           <nav class="primary-nav primary-nav--position-right">
             <ul>
@@ -27,6 +29,7 @@
       </div>
 
     </header>
+
     <div class="large-hero">
       <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
       <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
