Add smooth scroll functionality

--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
         <div class="site-header__menu-content">
           <nav class="primary-nav primary-nav--position-right">
             <ul>
-              <li><a href="#portfolio"><span>Portfolio</span></a></li>
-              <li><a href="#contact"><span>Contact</span></a></li>
+              <li><a href="#portfolio" id="portfolio-link"><span>Portfolio</span></a></li>
+              <li><a href="#contact" id="about-link"><span>Contact</span></a></li>
             </ul>
           </nav>
         </div>
@@ -47,7 +47,7 @@
     </div>
 
     <!-- PORTFOLIO -->
-    <section id="portfolio">
+    <section id="portfolio" class="page-section" data-matching-link="#portfolio-link">
       <div class="wrapper">
         <h2 class="headline headline--centered headline--main-title headline--margin-small">Portfolio</h2>
         <div class="row row--gutters row--equal-height-at-medium generic-content-container">
@@ -74,7 +74,7 @@
     </section>
 
     <!-- ABOUT -->
-    <section  id="contact" class="about">
+    <section  id="contact" class="about page-section" data-matching-link="#about-link">
       <div class="wrapper">
         <div class="about__title">
           <h2 class="about__name">JD</h2>
