Add lazyload and update logo to svg

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
           <nav class="primary-nav primary-nav--position-right">
             <ul>
               <li><a href="#portfolio" id="portfolio-link"><span>Portfolio</span></a></li>
-              <li><a href="#contact" id="about-link"><span>Contact</span></a></li>
+              <li><a href="#contact" class="contact_me" id="about-link"><span>Contact</span></a></li>
             </ul>
           </nav>
         </div>
@@ -36,12 +36,13 @@
       <div class="large-hero__text-content">
         <div class="wrapper">
           <div class="site-header__logo-main">
-            <img src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo">
+            <!-- <img src="assets/images/JD-Develop-White.png" alt="JDevelop LLC logo"> -->
+            <img src="assets/images/JD-Final_logo.svg" alt="JDevelop LLC logo">
           </div>
           <!-- <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1> -->
           <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
           <h2 class="large-hero--mobile">Front End Developer</h2>
-          <p><a class="btn btn__full" href="#contact">Contact Me</a></p>
+          <p><a class="btn btn__full contact_me" href="#contact">Contact Me</a></p>
         </div>
       </div>
     </div>
