--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
           <div class="row__medium-6">
             <div class="portfolio-item">
               <div class="portfolio-item__image portfolio-item--b-margin">
-                <img srcset="assets/images/rn_small.jpg" alt="R&N Consulting">
+                <img class="portfolio-item__coming-soon" srcset="assets/images/rn_small.jpg" alt="R&N Consulting">
               </div>
               <p class="headline--title headline--t-margin-small headline--b-margin-small">Responsive, Desktop, Mobile, Tablet</p>
               <!-- <p class="headline--description headline--b-margin-small">R&N already had their own development team, however, due to their busy schedule and available resources, I was given the task to put together a new version of their official site.</p> -->
@@ -64,7 +64,7 @@
           <div class="row__medium-6">
             <div class="portfolio-item">
               <div class="portfolio-item__image">
-                <img srcset="assets/images/alliance_small.jpg" alt="R&N Consulting">
+                <img class="portfolio-item__coming-soon" srcset="assets/images/alliance_small.jpg" alt="R&N Consulting">
               </div>
               <p class="headline--title headline--t-margin-small headline--b-margin-small">Mobile First Design</p>
               <!-- <p class="headline--description generic-content-container--b-margin">Alliance moving requested a mobile first design with a strict 10 day project deadline, and the deadline was a high priority. Challenge accepted! With the analytics wired up, I consider this site a 'work in progress'. Adjustments are being made according to user feedback, site statistics, and AB testing. The priority here is to increase user conversions.</p> -->
@@ -110,6 +110,13 @@
         <p>jdsghuman@gmail.com</p>
       </div>
     </footer>
+
+    <div class="modal">
+      <div class="modal__inner">
+        <h2 class="modal__title">Coming Soon!</h2>
+      </div>
+      <div class="modal__close">X</div>
+    </div>
     <script src="temp/scripts/App.js"></script>
   </body>
 </html>
