--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,23 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JD Ghuman | Automation & Front End Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
     <!-- build:css /assets/styles/styles.css -->
     <link rel="stylesheet" href="temp/styles/styles.css">
     <!-- endbuild -->
+
+    <!-- Google Analytics -->
+  	<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-78377127-1', 'auto');
+    ga('send', 'pageview');
+  	</script>
   </head>
   <body>
     <header class="site-header">
@@ -32,8 +43,8 @@
 
     </header>
 
-    <div class="large-hero">
-      <img class="large-hero__background" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
+    <div class="large-hero large-hero--color">
+      <img class="large-hero__background large-hero--fixed" srcset="assets/images/small_ocean.jpg 400w, assets/images/medium_ocean.jpg 800w, assets/images/ocean.jpg 2000w" alt="Background image">
       <!-- <img src="assets/images/ocean.jpg" alt="Background image"> -->
       <div class="large-hero__text-content">
         <div class="wrapper">
@@ -50,7 +61,7 @@
     </div>
 
     <!-- PORTFOLIO -->
-    <section id="portfolio" class="page-section" data-matching-link="#portfolio-link">
+    <section id="portfolio" class="page-section page-section__portfolio" data-matching-link="#portfolio-link">
       <div class="wrapper">
         <h2 class="headline headline--centered headline--main-title headline--margin-small">Portfolio</h2>
         <div class="row row--gutters row--equal-height-at-medium generic-content-container">
@@ -85,7 +96,7 @@
         </div>
         <div class="row">
           <div class="row__medium-6">
-            <p class="about__description">I am a Software Automation Engineer and Front End Developer in Orlando, Florida.  I enjoy turning concepts and ideas into beautiful, responsive, user intuitive designs. When I'm not building websites I can be found grilling corn at the beach, playing with my kids, walking my yappy dog, and drinking coffee...   I'm always drinking coffee!
+            <p class="about__description">I am a Software Automation Engineer and Front End Developer in Orlando, Florida.  I enjoy turning concepts and ideas into beautiful, responsive, user intuitive designs. <br><br>When I'm not building websites or automating all the things, I can be found grilling corn at the beach, playing with my kids, walking my yappy dog, and drinking coffee...   I'm always drinking coffee!
   						</p>
           </div>
           <div class="row__medium-6">
