Update Portfolio section

--- a/app/index.html
+++ b/app/index.html
@@ -68,19 +68,37 @@
           <div class="row__medium-6">
             <div class="portfolio-item">
               <div class="portfolio-item__image portfolio-item--b-margin">
-                <img class="portfolio-item__coming-soon" srcset="assets/images/rn_small.jpg" alt="R&N Consulting">
+                <picture>
+                  <source media="(min-width: 799px)" class="portfolio-item__coming-soon" srcset="assets/images/rn_small.jpg" alt="R&N Consulting design">
+                  <img class="portfolio-item__coming-soon" srcset="assets/images/rn_mobile.jpg" alt="R&N Consulting design">
+              </picture>
               </div>
-              <p class="headline--title headline--t-margin-small headline--b-margin-small">Responsive, Desktop, Mobile, Tablet</p>
-              <!-- <p class="headline--description headline--b-margin-small">R&N already had their own development team, however, due to their busy schedule and available resources, I was given the task to put together a new version of their official site.</p> -->
+              <p class="headline--title headline--t-margin-small headline--b-margin-small">R&N Consulting</p>
             </div>
           </div>
           <div class="row__medium-6">
             <div class="portfolio-item">
               <div class="portfolio-item__image">
-                <img class="portfolio-item__coming-soon" srcset="assets/images/alliance_small.jpg" alt="R&N Consulting">
+                <picture>
+                  <source media="(min-width: 799px)" class="portfolio-item__coming-soon" srcset="assets/images/alliance_small.jpg" alt="Alliance design">
+                  <img class="portfolio-item__coming-soon" srcset="assets/images/alliance_mobile.jpg" alt="Alliance design">
+                </picture>
               </div>
-              <p class="headline--title headline--t-margin-small headline--b-margin-small">Mobile First Design</p>
-              <!-- <p class="headline--description generic-content-container--b-margin">Alliance moving requested a mobile first design with a strict 10 day project deadline, and the deadline was a high priority. Challenge accepted! With the analytics wired up, I consider this site a 'work in progress'. Adjustments are being made according to user feedback, site statistics, and AB testing. The priority here is to increase user conversions.</p> -->
+              <p class="headline--title headline--t-margin-small headline--b-margin-small">Alliance Moving</p>
+            </div>
+          </div>
+          <!-- Bobbieleelicious -->
+        </div>
+        <div class="row row--gutters row--equal-height-at-medium generic-content-container">
+          <div class="row__medium-6">
+            <div class="portfolio-item">
+              <div class="portfolio-item__image">
+                <picture>
+                  <source media="(min-width: 799px)" class="portfolio-item__coming-soon" srcset="assets/images/bobbieleelicious.jpg" alt="Bobbieleelicious design">
+                  <img class="portfolio-item__coming-soon" srcset="assets/images/bobbieleelicious_mobile.jpg" alt="Bobbieleelicious design">
+                </picture>
+              </div>
+              <p class="headline--title headline--t-margin-small headline--b-margin-small">Bobbieleelicious</p>
             </div>
           </div>
         </div>
