Update hamburger icon

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
         </div> -->
         <div class="site-header__menu-icon">
           <div class="site-header__menu-icon__middle"></div>
+          <div class="site-header__menu-icon__middle-bottom"></div>
         </div>
         <div class="site-header__menu-content">
           <nav class="primary-nav primary-nav--position-right">
