--- a/app/index.html
+++ b/app/index.html
@@ -54,8 +54,8 @@
             <img src="assets/images/JD-Final_logo.svg" alt="JDevelop LLC logo">
           </div>
           <!-- <h1 class="large-hero__title"><span id="name">Jd Ghuman</span> Experience</h1> -->
-          <h2 class="large-hero__subtitle">Software Automation <span class="large-hero--job">| Front End Developer</span></h2>
-          <h2 class="large-hero--mobile">Front End Developer</h2>
+          <h2 class="large-hero__subtitle">Full Stack Engineer <span class="large-hero--job">| Software Automation</span></h2>
+          <h2 class="large-hero--mobile">Software Automation</h2>
           <p><a class="btn btn__full contact_me" href="#contact">Contact Me</a></p>
         </div>
       </div>
@@ -115,8 +115,7 @@
         </div>
         <div class="row">
           <div class="row__medium-6">
-            <p class="about__description">I am a Software Automation Engineer and Front End Developer in Orlando, Florida.  I enjoy turning concepts and ideas into beautiful, responsive, user intuitive designs. <br><br>When I'm not building websites or automating all the things, I can be found grilling corn at the beach, playing with my kids, walking my yappy dog, and drinking coffee...   I'm always drinking coffee!
-  						</p>
+              <p class="about__description">I am a Full Stack Engineer with a background in software automation, located in Minneapolis, MN. I enjoy turning concepts and ideas into beautiful, responsive, user intuitive designs.<br><br>When I am not building websites or automating all the things, I can be found hanging out with my family, walking my yappy dog, or drinking coffee…. I’m always drinking coffee!</p>
           </div>
           <div class="row__medium-6">
             <div class="about__buttons">
@@ -138,7 +137,7 @@
     <footer class="site-footer">
       <div class="wrapper">
         <p>Copyright &#x000A9;&nbsp; <span id="copyyear"></span> JDevelop LLC</p>
-        <p>JD Ghuman - Orlando, FL</p>
+        <p>JD Ghuman - Minneapolis, MN</p>
         <p>jdsghuman@gmail.com</p>
       </div>
     </footer>
